made formot correct but getting more than one page and points are not aline gonna make i that

--- a/output/generated_resume.tex
+++ b/output/generated_resume.tex
@@ -1,4 +1,11 @@
 ```latex
+\begin{document}
+\newcommand{\AND}{\unskip
+    \cleaders\copy\ANDbox\hskip\wd\ANDbox
+    \ignorespaces
+}
+\newsavebox\ANDbox
+\sbox\ANDbox{$|$}
 \begin{header}
     \fontsize{25 pt}{25 pt}\selectfont D Anantha Krishnan\\
     \vspace{5 pt}
@@ -7,268 +14,189 @@
     \mbox{\href{mailto:anantdayanithi@gmail.com}{anantdayanithi@gmail.com}} \AND%\
     \mbox{\href{tel:+91-6383168402}{+91 6383168402}} \AND%\
     \mbox{\href{https://www.linkedin.com/in/anantha-krishnan-d-b13689201/}{linkedin.com/in/anantha-krishnan-d-b13689201/}} \AND%\
-    \mbox{\href{https://github.com/anantha-krishnan}{github.com/anantha-krishnan}}
+    \mbox{github.com/anantha-krishnan} % Added GitHub link based on extracted info.
 \end{header}
 \vspace{5 pt - 0.3 cm}
-
-\section{Summary}
-Motivated Data Scientist and Software Engineer \newline
-with experience in Python, automation, and AI/ML.  \newline
-Proficient in React ecosystem tools (Node.js, npm) \newline
-and seeking a front-end developer role.  \newline
-Strong problem-solving and collaboration skills.
-
-\section{Skills}
-\textbf{Programming Languages:} Python, JavaScript, SQL, \newline  VBScript
-\textbf{Frameworks/Libraries:} React, Node.js, npm, Redux, \newline Flask, Keras, NumPy, Pandas, Matplotlib
-\textbf{Databases:} SQLite
-\textbf{Tools:} Selenium, Power BI, GitHub, Postman, \newline  REST APIs,  Pytest, RPA, SAP Automation
-\textbf{Other:}  HTML, CSS, TypeScript,  Deep Learning
-
-
-\section{Experience}
-\textbf{Beez Innovation Labs, Software Engineer Trainee} (Feb 2024 – Sep 2024)
-\begin{itemize}
-    \item Developed and implemented RPA solutions for \newline SAP automation, improving efficiency.
-    \item Automated web scraping using Selenium and \newline Python for data extraction.
-    \item Integrated Python automation with DMS using \newline HTTPx.
-    \item Contributed to Python automation bot library.
-    \item Collaborated with cross-functional teams \newline on scalable automation solutions.
-\end{itemize}
-
-\textbf{Beez labs, SOX Control Automation - Bacardi} (Feb 2024 - Sep 2024)
-\begin{itemize}
-    \item Created generic bots for SAP data extraction, \newline transformation, and validation.
-    \item Developed Selenium automation scripts for \newline websites (DutyFree, SysAid).
-    \item Automated Excel tasks using Python libraries \newline (pandas, openpyxl, xlwings).
-\end{itemize}
-
-
-\section{Projects}
-\textbf{Cancer Cell Detection (Deep Learning)} (Dec 2022 - Feb 2023)
-U-Net for image segmentation and binary classification. Streamlit deployment.
-
-\textbf{Hand Sign Detection (Deep Learning)} (May 2023 - Jul 2023)
-CNN for hand gesture recognition using Keras and TensorFlow.
-
-\textbf{Telecom Customer Churn Prediction} (Aug 2023 - Oct 2023)
-Compared multiple ML algorithms (Logistic Regression, \newline SVM, Random Forest, KNN, Naive Bayes).
-
-\textbf{ICET Data Analyst} (Mar 2023 - Apr 2023)
-Sentiment analysis of WhatsApp chat data using Python \newline and Power BI visualization.
-
-\textbf{THE SPARK FOUNDATION Web Development} (Apr 2021 - June 2021)
-Basic banking system using HTML, CSS, and Python.
-
-
-\section{Education}
-\textbf{Sri Ramachandra Faculty of Engineering and Technology} (2020-2024)
-B.Tech - Computer Science and Medical Engineering, CGPA: 8.1
-
-\textbf{St. John’s Senior Secondary School (CBSE)}
-SSLC (2017-2018) - 7.2 CGPA, HSC (2019-2020) - 7.6 CGPA
-
-\textbf{Besant Technology}
-Python Data Science
 ```
 
 \section{Technologies}
 \begin{onecolentry}
-\textbf{Languages:} Python, JavaScript, SQL, VBScript
+    \textbf{Languages:} Python, JavaScript, SQL
 \end{onecolentry}
 \vspace{0.05 cm}
 \begin{onecolentry}
-\textbf{Frameworks:} Flask, Selenium, React.js (Familiar)
+    \textbf{Frameworks:} Flask, React.js, Node.js
 \end{onecolentry}
 \vspace{0.05 cm}
 \begin{onecolentry}
-\textbf{Libraries:} Keras, NumPy, Pandas, \newline Matplotlib,  OpenCV,  TensorFlow
+    \textbf{Libraries:} Keras, NumPy, Pandas, Matplotlib,
+    OpenCV, nltk, scikit-learn
 \end{onecolentry}
 \vspace{0.05 cm}
 \begin{onecolentry}
-\textbf{Tools:} Git, Postman, Power BI, \newline  REST APIs,  SAP, RPA, Pytest
+    \textbf{Tools:}  Selenium,  Power BI, Git, GitHub,
+    Postman,  RPA, Pytest,  npm, Yarn, Redux,  HTTPx,
+    REST APIs
+\end{onecolentry}
+\vspace{0.05 cm}
+\begin{onecolentry}
+    \textbf{Databases:} SQLite, SAP
+\end{onecolentry}
+\vspace{0.05 cm}
+\begin{onecolentry}
+    \textbf{Other Technologies:}  VBScript,  Deep Learning,
+    AI/ML,  TensorFlow,  Streamlit,  HTML, CSS,  TypeScript
 \end{onecolentry}
 
 
 \section{Experience}
 \begin{twocolentry}{
-        Feb 2024 – Sep 2024
-    }
-        \textbf{Software Engineer Trainee}, Beez Innovation Labs\end{twocolentry}
-    \vspace{0.10 cm}
-    \begin{onecolentry}
-        \begin{highlights}
-            \item Developed RPA solutions for SAP automation, improving efficiency.
-            \item Automated web scraping using Web Scrapy for data extraction.
-            \item Integrated Python automation with DMS using httpx.
-            \item Contributed to a Python automation bot library.
-            \item Collaborated on scalable automation solutions.
-            \item Automated SOX control processes in SAP, ensuring compliance.
-            \item Created generic bots for data extraction and validation in SAP.
-            \item Developed Selenium scripts for web automation (DutyFree, SysAid).
-            \item Automated Excel tasks using Python (pandas, openpyxl, xlwings).
-            \item Built reusable bot functions using Python classes and OOP.
-
-        \end{highlights}
-    \end{onecolentry}
-\vspace{0.2 cm}
-\begin{twocolentry}{
-        Apr 2021 - June 2021
-    }
-        \textbf{Web Developer}, The Spark Foundation\end{twocolentry}
-    \vspace{0.10 cm}
-    \begin{onecolentry}
-        \begin{highlights}
-            \item Developed a basic banking system using HTML, CSS, and Python.
-            \item Managed account details, tracked transactions, and built a user interface.
-            \item Handled core banking functionalities, ensuring smooth front-end/back-end interaction.
-            \item Implemented back-end logic with Python and SQLite database.
-            \item Created seamless integration between UI and server-side logic.  
-            \item Demonstrated proficiency in full-stack web development.
-            \item Utilized  HTML, CSS, Python, and SQLite.
-            \item Focused on data handling and storage.
-            \item Developed responsive web interfaces.
-            \item Showcased a strong understanding of front-end development.
-
-        \end{highlights}
-    \end{onecolentry}
-
-
-```latex
-\section{Education}
-\begin{twocolentry}{2020-2024}
-    \textbf{B.Tech - Computer Science and Medical Engineering}, \\ Sri Ramachandra Faculty of Engineering and Technology
-\end{twocolentry}
+    Feb 2024 – Sep 2024
+}
+    \textbf{Software Engineer Trainee}, Beez Innovation Labs\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
     \begin{highlights}
-        \item CGPA: 8.1/10.  Strong academic record.
-        \item Relevant Coursework:  Data Structures, Algorithms, Database Systems, Web Development (HTML, CSS, Python),  AI/ML.
+        \item Developed RPA solutions for SAP automation.
+        \item Automated web scraping using Web Scrapy.
+        \item Integrated Python automation with DMS using httpx.
+        \item Contributed to Python automation bot library.
+        \item Collaborated on scalable automation solutions.
+        \item Automated SOX control processes in SAP.
+        \item Created generic bots for SAP data extraction.
+        \item Developed Selenium scripts for web automation.
+        \item Automated Excel tasks using Python libraries.
     \end{highlights}
+\end{onecolentry}
+\vspace{0.2 cm}
+\begin{twocolentry}{
+    Apr 2021 - June 2021
+}
+    \textbf{Web Developer}, The Spark Foundation\end{twocolentry}
+\vspace{0.10 cm}
+\begin{onecolentry}
+    \begin{highlights}
+        \item Developed a basic banking system using HTML, CSS,
+          and Python with SQLite database.
+    \end{highlights}
+\end{onecolentry}
+
+
+\section{Education}
+\begin{twocolentry}{2020-2024}
+        \textbf{B.Tech - Computer Science and Medical Engineering}, \\
+        Sri Ramachandra Faculty of Engineering and Technology\\
+        CGPA: 8.1
+\end{twocolentry}
+\vspace{0.10 cm}
+\begin{onecolentry}
+        \begin{highlights}
+            \item Relevant coursework likely included data structures,
+                  algorithms, and database systems.  Inferred based on
+                  project experience.
+        \end{highlights}
 \end{onecolentry}
 \vspace{0.10 cm}
 \begin{twocolentry}{2017-2018}
-    \textbf{SSLC}, St. John’s Senior Secondary School (CBSE)
+        \textbf{SSLC}, St. John’s Senior Secondary School (CBSE)\\
+        CGPA: 7.2
 \end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-    \begin{highlights}
-        \item CGPA: 7.2/10.
-        \item Demonstrated strong foundation in academics.
-    \end{highlights}
-\end{onecolentry}
 \vspace{0.10 cm}
 \begin{twocolentry}{2019-2020}
-    \textbf{HSC}, St. John’s Senior Secondary School (CBSE)
+        \textbf{HSC}, St. John’s Senior Secondary School (CBSE)\\
+        CGPA: 7.6
 \end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
+        \textbf{Besant Technology - Python Data Science}
+\end{onecolentry}
+
+
+```latex
+\section{Projects}
+\begin{twocolentry}{
+    Dec 2022 - Feb 2023
+}
+    \textbf{Cancer Cell Detection - Deep Learning}\end{twocolentry}
+\vspace{0.10 cm}
+\begin{onecolentry}
     \begin{highlights}
-        \item CGPA: 7.6/10.
-        \item Further strengthened foundational knowledge.
+        \item U-Net for nucleus image segmentation.
+        \item Binary classification on segmented images.
+        \item Streamlit application for result deployment.
+        \item Used TensorFlow, Keras, OpenCV.
     \end{highlights}
 \end{onecolentry}
-\vspace{0.10 cm}
-\begin{twocolentry}{Course Completion Date}
-    \textbf{Python Data Science}, Besant Technology
-\end{twocolentry}
+\vspace{0.2 cm}
+\begin{twocolentry}{
+    May 2023 - Jul 2023
+}
+    \textbf{Hand Sign Detection - Deep Learning}\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
     \begin{highlights}
-        \item Specialized training in Python for Data Science.
-        \item Enhanced skills relevant to data-driven roles.
+        \item CNN for hand gesture recognition (Keras).
+        \item Data augmentation (rotation, zoom, flip).
+        \item TensorFlow and Keras for model training.
+        \item Image preprocessing and data collection.
+    \end{highlights}
+\end{onecolentry}
+\vspace{0.2 cm}
+\begin{twocolentry}{
+    Aug 2023 - Oct 2023
+}
+    \textbf{Telecom Customer Churn Prediction}\end{twocolentry}
+\vspace{0.10 cm}
+\begin{onecolentry}
+    \begin{highlights}
+        \item Logistic Regression, SVM, Random Forest, KNN.
+        \item Naive Bayes; Random Forest best performer.
+        \item Data preprocessing and handling class imbalance.
+        \item Hyperparameter tuning and cross-validation.
+    \end{highlights}
+\end{onecolentry}
+\vspace{0.2 cm}
+\begin{twocolentry}{
+    Mar 2023 - Apr 2023
+}
+    \textbf{ICET Data Analyst}\end{twocolentry}
+\vspace{0.10 cm}
+\begin{onecolentry}
+    \begin{highlights}
+        \item WhatsApp chat sentiment analysis (IPL).
+        \item Python (pandas, nltk, scikit-learn).
+        \item Power BI for data visualization and reporting.
+        \item Handled unstructured data and NLP techniques.
+    \end{highlights}
+\end{onecolentry}
+\vspace{0.2 cm}
+\begin{twocolentry}{
+    Feb 2024 - Sep 2024
+}
+    \textbf{Beez labs - SOX Control Automation - Bacardi}\end{twocolentry}
+\vspace{0.10 cm}
+\begin{onecolentry}
+    \begin{highlights}
+        \item Automated SOX control processes in SAP.
+        \item Generic bots for data extraction, transformation.
+        \item Selenium for web automation (DutyFree, SysAid).
+        \item Python for Excel automation (pandas, openpyxl).
+    \end{highlights}
+\end{onecolentry}
+\vspace{0.2 cm}
+\begin{twocolentry}{
+    Apr 2021 - June 2021
+}
+    \textbf{THE SPARK FOUNDATION Web Development}\end{twocolentry}
+\vspace{0.10 cm}
+\begin{onecolentry}
+    \begin{highlights}
+        \item Basic banking system (HTML, CSS, Python).
+        \item Account management and transaction tracking.
+        \item SQLite for database management.
+        \item Full-stack web development implementation.
     \end{highlights}
 \end{onecolentry}
 
 ```
-
-\section{Projects}
-\begin{twocolentry}{Dec 2022 - Feb 2023}
-\textbf{Cancer Cell Detection} \\ (Deep Learning)\end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-\begin{highlights}
-\item Developed a U-Net model for nucleus image segmentation and binary classification.
-\item Deployed the model via a user-friendly Streamlit application.
-\item Optimized model with custom loss functions and OpenCV.
-\end{highlights}
-\end{onecolentry}
-\vspace{0.2 cm}
-\begin{twocolentry}{May 2023 - Jul 2023}
-\textbf{Hand Sign Detection} \\ (Deep Learning)\end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-\begin{highlights}
-\item Built a CNN using Keras for hand gesture recognition.
-\item Implemented data augmentation techniques (rotation, zoom, flip).
-\item Achieved high accuracy in classifying various hand gestures.
-\end{highlights}
-\end{onecolentry}
-\vspace{0.2 cm}
-\begin{twocolentry}{Aug 2023 - Oct 2023}
-\textbf{Telecom Churn Prediction} \\ (Machine Learning)\end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-\begin{highlights}
-\item Developed models using Logistic Regression, SVM, Random Forest, KNN, and Naive Bayes.
-\item Optimized Random Forest model for highest accuracy and F1-score.
-\item Performed hyperparameter tuning and cross-validation for improved performance.
-\end{highlights}
-\end{onecolentry}
-\vspace{0.2 cm}
-\begin{twocolentry}{Mar 2023 - Apr 2023}
-\textbf{ICET Data Analyst} \\ (IPL Chat Analysis)\end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-\begin{highlights}
-\item Performed sentiment analysis on WhatsApp chat data using Python (pandas, nltk, scikit-learn).
-\item Visualized and presented findings using Power BI for effective reporting.
-\item Extracted meaningful insights from unstructured data related to IPL.
-\end{highlights}
-\end{onecolentry}
-\vspace{0.2 cm}
-\begin{twocolentry}{Feb 2024 - Sep 2024}
-\textbf{Beez Labs - SOX Control Automation} \\ (Bacardi)\end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-\begin{highlights}
-\item Automated SAP transactions and reporting using Python bots.
-\item Created generic bots for data extraction, transformation, and validation.
-\item Improved audit trail process and reporting accuracy in SAP.
-\end{highlights}
-\end{onecolentry}
-\vspace{0.2 cm}
-\begin{twocolentry}{Feb 2024 - Sep 2024}
-\textbf{Beez Labs - Selenium Web Automation}\end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-\begin{highlights}
-\item Automated data extraction and report generation on DutyFree and SysAid.
-\item Used Selenium with Python for dynamic web scraping and AJAX handling.
-\item Streamlined repetitive tasks, improving efficiency and accuracy.
-\end{highlights}
-\end{onecolentry}
-\vspace{0.2 cm}
-\begin{twocolentry}{Feb 2024 - Sep 2024}
-\textbf{Beez Labs - Excel Automation}\end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-\begin{highlights}
-\item Automated Excel tasks using Python (pandas, openpyxl, xlwings).
-\item Streamlined financial data processing and report generation.
-\item Implemented data validation using conditional formatting and formulas.
-\end{highlights}
-\end{onecolentry}
-\vspace{0.2 cm}
-\begin{twocolentry}{Apr 2021 - June 2021}
-\textbf{The Spark Foundation - Web Development} \\ (Banking System)\end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-\begin{highlights}
-\item Developed a basic banking system using HTML, CSS, and Python.
-\item Managed account details, transactions, and user interface.
-\item Used SQLite for database management and efficient data handling.
-\end{highlights}
-\end{onecolentry}
-
 
