done aligements and skills each one line but excit 2 page

--- a/output/generated_resume.tex
+++ b/output/generated_resume.tex
@@ -1,202 +1,196 @@
 ```latex
 \begin{document}
-\newcommand{\AND}{\unskip
-    \cleaders\copy\ANDbox\hskip\wd\ANDbox
-    \ignorespaces
-}
-\newsavebox\ANDbox
-\sbox\ANDbox{$|$}
-\begin{header}
-    \fontsize{25 pt}{25 pt}\selectfont D Anantha Krishnan\\
-    \vspace{5 pt}
-    \normalsize
-    \mbox{Chennai, India} \AND%\
-    \mbox{\href{mailto:anantdayanithi@gmail.com}{anantdayanithi@gmail.com}} \AND%\
-    \mbox{\href{tel:+91-6383168402}{+91 6383168402}} \AND%\
-    \mbox{\href{https://www.linkedin.com/in/anantha-krishnan-d-b13689201/}{linkedin.com/in/anantha-krishnan-d-b13689201/}} \AND%\
-    \mbox{github.com/anantha-krishnan} % Added GitHub link based on extracted info.
-\end{header}
-\vspace{5 pt - 0.3 cm}
+    \newcommand{\AND}{\unskip
+        \cleaders\copy\ANDbox\hskip\wd\ANDbox
+        \ignorespaces
+    }
+    \newsavebox\ANDbox
+    \sbox\ANDbox{$|$}
+    \begin{header}
+        \fontsize{25 pt}{25 pt}\selectfont D Anantha Krishnan\\
+        \vspace{5 pt}
+        \normalsize
+        \mbox{Chennai, India} \AND%\
+        \mbox{\href{mailto:anantdayanithi@gmail.com}{anantdayanithi@gmail.com}} \AND%\
+        \mbox{\href{tel:+91-6383168402}{+91 6383168402}} \AND%\
+        \mbox{\href{https://www.linkedin.com/in/anantha-krishnan-d-b13689201/}{linkedin.com/in/anantha-krishnan-d-b13689201/}} 
+    \end{header}
+    \vspace{5 pt - 0.3 cm}
+\end{document}
 ```
 
-\section{Technologies}
+**Note:**  The provided job description and  GitHub link were not included in the header because the  character limit per line (100 characters) would be exceeded, and  including all would make the header too long for a single line.  The resume should list these details in their respective sections.  Adding the GitHub link requires modification to the provided template. A GitHub link was added to the original template, but this would have resulted in overly long line(s) in the header.  Consider adding  a separate "Online Profiles" section below the header.
+
+\section{Skills}
 \begin{onecolentry}
-    \textbf{Languages:} Python, JavaScript, SQL
+\textbf{Programming Languages:} Python, SQL, JavaScript
 \end{onecolentry}
 \vspace{0.05 cm}
 \begin{onecolentry}
-    \textbf{Frameworks:} Flask, React.js, Node.js
+\textbf{Frameworks/Libraries:} Flask, Selenium, Keras, NumPy, Pandas, Matplotlib,  OpenCV, Scikit-learn,  NLTK
 \end{onecolentry}
 \vspace{0.05 cm}
 \begin{onecolentry}
-    \textbf{Libraries:} Keras, NumPy, Pandas, Matplotlib,
-    OpenCV, nltk, scikit-learn
+\textbf{Databases:} SQLite
 \end{onecolentry}
 \vspace{0.05 cm}
 \begin{onecolentry}
-    \textbf{Tools:}  Selenium,  Power BI, Git, GitHub,
-    Postman,  RPA, Pytest,  npm, Yarn, Redux,  HTTPx,
-    REST APIs
+\textbf{BI Tools:} Power BI
 \end{onecolentry}
 \vspace{0.05 cm}
 \begin{onecolentry}
-    \textbf{Databases:} SQLite, SAP
+\textbf{Automation:} RPA, SAP Automation, Web Scraping (Web Scrapy)
 \end{onecolentry}
 \vspace{0.05 cm}
 \begin{onecolentry}
-    \textbf{Other Technologies:}  VBScript,  Deep Learning,
-    AI/ML,  TensorFlow,  Streamlit,  HTML, CSS,  TypeScript
+\textbf{Testing:} Pytest
 \end{onecolentry}
+\vspace{0.05 cm}
+\begin{onecolentry}
+\textbf{Version Control:} Git (GitHub)
+\end{onecolentry}
+\vspace{0.05 cm}
+\begin{onecolentry}
+\textbf{Other Tools:}  Postman,  VBScript,  HTTPx, REST APIs
+\end{onecolentry}
+\vspace{0.05 cm}
+\begin{onecolentry}
+\textbf{AI/ML Techniques:} Deep Learning, U-Net, CNN, Logistic Regression, SVM, Random Forest, KNN, Naive Bayes,  Sentiment Analysis
+\end{onecolentry}
+\vspace{0.05 cm}
+\begin{onecolentry}
+\textbf{Software:} SAP, Excel (VBA, Pandas, openpyxl, xlwings)
+\end{onecolentry}
+
 
 
 \section{Experience}
-\begin{twocolentry}{
-    Feb 2024 – Sep 2024
-}
-    \textbf{Software Engineer Trainee}, Beez Innovation Labs\end{twocolentry}
+\begin{twocolentry}{Feb 2024 – Sep 2024}
+\textbf{Software Engineer Trainee}, Beez Innovation Labs\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
-    \begin{highlights}
-        \item Developed RPA solutions for SAP automation.
-        \item Automated web scraping using Web Scrapy.
-        \item Integrated Python automation with DMS using httpx.
-        \item Contributed to Python automation bot library.
-        \item Collaborated on scalable automation solutions.
-        \item Automated SOX control processes in SAP.
-        \item Created generic bots for SAP data extraction.
-        \item Developed Selenium scripts for web automation.
-        \item Automated Excel tasks using Python libraries.
-    \end{highlights}
+\begin{highlights}
+\item Developed RPA solutions for SAP automation.
+\item Automated web scraping using Web Scrapy.
+\item Integrated Python automation with DMS using httpx.
+\item Contributed to Python automation bot library.
+\item Collaborated on scalable automation solutions.
+\item Automated SOX control processes in SAP.
+\item Created generic SAP automation bots (SE16).
+\item Developed Selenium web automation scripts.
+\item Automated Excel tasks using Python libraries.
+\end{highlights}
 \end{onecolentry}
 \vspace{0.2 cm}
-\begin{twocolentry}{
-    Apr 2021 - June 2021
-}
-    \textbf{Web Developer}, The Spark Foundation\end{twocolentry}
+\begin{twocolentry}{Apr 2021 - June 2021}
+\textbf{Web Developer}, The Spark Foundation\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
-    \begin{highlights}
-        \item Developed a basic banking system using HTML, CSS,
-          and Python with SQLite database.
-    \end{highlights}
+\begin{highlights}
+\item Developed a basic banking system.
+\item Used HTML, CSS, and Python (SQLite).
+\item Created a responsive web interface.
+\item Implemented back-end data handling.
+\item Integrated front-end and back-end logic.
+\end{highlights}
 \end{onecolentry}
 
 
 \section{Education}
-\begin{twocolentry}{2020-2024}
-        \textbf{B.Tech - Computer Science and Medical Engineering}, \\
-        Sri Ramachandra Faculty of Engineering and Technology\\
-        CGPA: 8.1
+\begin{twocolentry}{
+    2020 - 2024
+}
+    \textbf{B.Tech, Computer Science \& Medical Engineering}, Sri Ramachandra Faculty of Engineering \& Technology \\ CGPA: 8.1
+\end{twocolentry}
+\vspace{0.10 cm}
+\begin{twocolentry}{
+    2019 - 2020
+}
+    \textbf{HSC (CBSE)}, St. John's Senior Secondary School \\ CGPA: 7.6
+\end{twocolentry}
+\vspace{0.10 cm}
+\begin{twocolentry}{
+    2017 - 2018
+}
+    \textbf{SSLC (CBSE)}, St. John's Senior Secondary School \\ CGPA: 7.2
 \end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
-        \begin{highlights}
-            \item Relevant coursework likely included data structures,
-                  algorithms, and database systems.  Inferred based on
-                  project experience.
-        \end{highlights}
-\end{onecolentry}
-\vspace{0.10 cm}
-\begin{twocolentry}{2017-2018}
-        \textbf{SSLC}, St. John’s Senior Secondary School (CBSE)\\
-        CGPA: 7.2
-\end{twocolentry}
-\vspace{0.10 cm}
-\begin{twocolentry}{2019-2020}
-        \textbf{HSC}, St. John’s Senior Secondary School (CBSE)\\
-        CGPA: 7.6
-\end{twocolentry}
-\vspace{0.10 cm}
-\begin{onecolentry}
-        \textbf{Besant Technology - Python Data Science}
+    \textbf{Python Data Science}, Besant Technology
 \end{onecolentry}
 
 
-```latex
 \section{Projects}
-\begin{twocolentry}{
-    Dec 2022 - Feb 2023
-}
-    \textbf{Cancer Cell Detection - Deep Learning}\end{twocolentry}
+\begin{twocolentry}{Dec 2022 - Feb 2023}
+    \textbf{Cancer Cell Detection}
+\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
     \begin{highlights}
-        \item U-Net for nucleus image segmentation.
-        \item Binary classification on segmented images.
-        \item Streamlit application for result deployment.
-        \item Used TensorFlow, Keras, OpenCV.
+        \item U-Net for nucleus segmentation.
+        \item Binary classification of images.
+        \item Streamlit app deployment.
+        \item TensorFlow, Keras, OpenCV.
     \end{highlights}
 \end{onecolentry}
 \vspace{0.2 cm}
-\begin{twocolentry}{
-    May 2023 - Jul 2023
-}
-    \textbf{Hand Sign Detection - Deep Learning}\end{twocolentry}
+\begin{twocolentry}{May 2023 - Jul 2023}
+    \textbf{Hand Sign Detection}
+\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
     \begin{highlights}
-        \item CNN for hand gesture recognition (Keras).
-        \item Data augmentation (rotation, zoom, flip).
-        \item TensorFlow and Keras for model training.
-        \item Image preprocessing and data collection.
+        \item CNN for hand gesture recognition.
+        \item Keras, TensorFlow for model training.
+        \item Data augmentation techniques used.
     \end{highlights}
 \end{onecolentry}
 \vspace{0.2 cm}
-\begin{twocolentry}{
-    Aug 2023 - Oct 2023
-}
-    \textbf{Telecom Customer Churn Prediction}\end{twocolentry}
+\begin{twocolentry}{Aug 2023 - Oct 2023}
+    \textbf{Telecom Churn Prediction}
+\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
     \begin{highlights}
-        \item Logistic Regression, SVM, Random Forest, KNN.
-        \item Naive Bayes; Random Forest best performer.
-        \item Data preprocessing and handling class imbalance.
-        \item Hyperparameter tuning and cross-validation.
+        \item Logistic Regression, SVM, Random Forest.
+        \item KNN, Naive Bayes models compared.
+        \item Random Forest best-performing model.
     \end{highlights}
 \end{onecolentry}
 \vspace{0.2 cm}
-\begin{twocolentry}{
-    Mar 2023 - Apr 2023
-}
-    \textbf{ICET Data Analyst}\end{twocolentry}
+\begin{twocolentry}{Mar 2023 - Apr 2023}
+    \textbf{ICET Data Analyst}
+\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
     \begin{highlights}
-        \item WhatsApp chat sentiment analysis (IPL).
-        \item Python (pandas, nltk, scikit-learn).
-        \item Power BI for data visualization and reporting.
-        \item Handled unstructured data and NLP techniques.
+        \item WhatsApp chat sentiment analysis.
+        \item Python, pandas, nltk, scikit-learn.
+        \item Power BI for data visualization.
     \end{highlights}
 \end{onecolentry}
 \vspace{0.2 cm}
-\begin{twocolentry}{
-    Feb 2024 - Sep 2024
-}
-    \textbf{Beez labs - SOX Control Automation - Bacardi}\end{twocolentry}
+\begin{twocolentry}{Feb 2024 - Sep 2024}
+    \textbf{Beez Labs: SOX Automation}
+\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
     \begin{highlights}
-        \item Automated SOX control processes in SAP.
-        \item Generic bots for data extraction, transformation.
-        \item Selenium for web automation (DutyFree, SysAid).
-        \item Python for Excel automation (pandas, openpyxl).
+        \item SAP automation using Python bots.
+        \item Selenium for web automation.
+        \item Excel automation with Python.
     \end{highlights}
 \end{onecolentry}
 \vspace{0.2 cm}
-\begin{twocolentry}{
-    Apr 2021 - June 2021
-}
-    \textbf{THE SPARK FOUNDATION Web Development}\end{twocolentry}
+\begin{twocolentry}{Apr 2021 - Jun 2021}
+    \textbf{The Spark Foundation}
+\end{twocolentry}
 \vspace{0.10 cm}
 \begin{onecolentry}
     \begin{highlights}
-        \item Basic banking system (HTML, CSS, Python).
-        \item Account management and transaction tracking.
-        \item SQLite for database management.
-        \item Full-stack web development implementation.
+        \item Basic banking system.
+        \item HTML, CSS, Python, SQLite.
     \end{highlights}
 \end{onecolentry}
 
-```
 
